# Smart-alarm-clock

./: .gitignore  CMakeLists.txt  README.md  aarch64-toolchain.cmake  build.sh
api/: package-lock.json  package.json
api/lib/: index.js  time.js
api/src/: cache.js  cache.json  calendar.js  calendar.json  index.js  time.js  weather.js  weather.json
app/: CMakeLists.txt  Smart-alarm-clock
app/include/: calendar.h  clock.h  weather.h
app/src/: calendar.c  clock.c  main.c  weather.c
hal/: CMakeLists.txt
hal/include/hal/: 1602A.h  SSD1780.h  customWait.h  encoder.h  i2c.h  spi.h
hal/src/: 1602A.c  SSD1780.c  customWait.c  encoder.c  i2c.c  photoResistor.c  spi.c
